# setuptools-localimport

./: .gitignore  README.rst  setup.cfg  setup.py  setuptools_localimport.py
