[metadata]
name = setuptools-localimport
version = 1.0.1
description = Shim to Setuptools PEP 517 build backend to patch sys.path.
url = https://github.com/uranusjr/setuptools-localimport
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
license = ISC License
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = true
install_requires =
    setuptools
    wheel
py_modules = setuptools_localimport

[bdist_wheel]
universal = 1
